--- a/index.html
+++ b/index.html
@@ -1,2 +1,14 @@
-test website hehe
-my second commit!
+<!DOCTYPE html>
+<html lang="en-US"> <!--setting language of page to english-->
+    <head>
+        <meta charset="utf-8"> <!--setting characters which are most valid ones-->
+        <title> my website </title> <!--website title-->
+    </head>
+    <body>
+        <h1> heading lul</h1> <!--start at 1 for biggest-->
+        <p> This is my first paragraph</p> <!--new paragraph-->
+        <p> test website hehe
+        my second commit! </p>
+        <h2> heading 2 man h2</h2>
+    </body>
+</html>
