--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <h1> heading lul</h1> <!--start at 1 for biggest-->
         <p> This is my first paragraph</p> <!--new paragraph-->
         <p> test website hehe
-        my second commit! </p>
+        my third commit! </p>
         <h2> heading 2 man h2</h2>
     </body>
 </html>
