--- a/index.html
+++ b/index.html
@@ -2,10 +2,23 @@
 <html lang="en-US"> <!--setting language of page to english-->
     <head>
         <meta charset="utf-8"> <!--setting characters which are most valid ones-->
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <!--helps for non-computer devices-->
         <title> my website </title> <!--website title-->
     </head>
     <body>
-        <h1> heading lul</h1> <!--start at 1 for biggest-->
+        <header>
+            <nav>
+                <ul> <!--unordered list-->
+                    <li> <a href="index.html">home</a> </li> <!--li = bullet list-->
+                    <li> <a href="page2.html">page 2</a> <!--link to another site--> </li>
+                </ul>
+            </nav>
+        </header>
+        <h1> 
+            heading lul <!--start at 1 for biggest-->
+        </h1> 
         <p> This is my first paragraph</p> <!--new paragraph-->
         <p> test website hehe
         my third commit! </p>
