multi pages about to add images

--- a/index.html
+++ b/index.html
@@ -1,27 +1,54 @@
 <!DOCTYPE html>
-<html lang="en-US"> <!--setting language of page to english-->
-    <head>
-        <meta charset="utf-8"> <!--setting characters which are most valid ones-->
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <!--helps for non-computer devices-->
-        <title> my website </title> <!--website title-->
-    </head>
-    <body>
-        <header>
-            <nav>
-                <ul> <!--unordered list-->
-                    <li> <a href="index.html">home</a> </li> <!--li = bullet list-->
-                    <li> <a href="page2.html">page 2</a> <!--link to another site--> </li>
-                </ul>
-            </nav>
-        </header>
-        <h1> 
-            heading lul <!--start at 1 for biggest-->
-        </h1> 
-        <p> This is my first paragraph</p> <!--new paragraph-->
-        <p> test website hehe
-        my third commit! </p>
-        <h2> heading 2 man h2</h2>
-    </body>
+<html lang="en-US">
+  <!--setting language of page to english-->
+  <head>
+    <meta charset="utf-8" />
+    <!--setting characters which are most valid ones-->
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!--helps for non-computer devices-->
+    <title>my website</title>
+    <!--website title-->
+  </head>
+  <body>
+    <header>
+      <nav>
+        <ul>
+          <!--unordered list-->
+          <!--li = bullet list-->
+          <a href="index.html">home</a>
+          <a href="page2.html">page 2</a>
+          <!--link to another site-->
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <!--below header to help structure-->
+      <section>
+        <h1>
+          heading lul
+          <!--start at 1 for biggest-->
+        </h1>
+        <p>This is my first paragraph</p>
+        <!--new paragraph-->
+        <p>test website hehe pogchamp</p>
+      </section>
+      <section>
+        <h2>heading 2 man h2</h2>
+        <p>another section on the website</p>
+      </section>
+    </main>
+    <footer>
+      <nav>
+        <ul>
+          <!--unordered list-->
+          <!--li = bullet list-->
+          <a href="index.html">home</a>
+          <a href="page2.html">page 2</a>
+          <!--link to another site-->
+        </ul>
+      </nav>
+      <p>Copyright &copy; Jessica Wu</p>
+    </footer>
+  </body>
 </html>
