--- a/page2.html
+++ b/page2.html
@@ -1,18 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!--helps for non-computer devices-->
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!--helps for non-computer devices-->
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
     <header>
-        <nav>
-            <ul>
-                <a href="index.html">home</a>
-            </ul>
-        </nav>
+      <nav>
+        <ul>
+          <a href="index.html">home</a>
+          <a href="page2.html">page 2</a>
+          <!--link to another site-->
+        </ul>
+      </nav>
     </header>
-</body>
+    <main>
+      <h1>add an image</h1>
+      <p></p>
+    </main>
+  </body>
 </html>
