--- a/page2.html
+++ b/page2.html
@@ -5,6 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!--helps for non-computer devices-->
+    <style>
+      <!--css code to resize images and stuff-- > img {
+        width: 100%;
+        height: auto;
+      }
+    </style>
     <title>Document</title>
   </head>
   <body>
@@ -18,8 +24,9 @@
       </nav>
     </header>
     <main>
-      <h1>add an image</h1>
-      <p></p>
+      <h1>image</h1>
+      <p>i guess an image is about to be added</p>
+      <img src="img/golden doodle.jpg" alt="golden doodle puppy!" />
     </main>
   </body>
 </html>
