--- a/index.html
+++ b/index.html
@@ -7,48 +7,63 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!--helps for non-computer devices-->
-    <title>my website</title>
-    <!--website title-->
+    <title>Jessica Wu | Home</title>
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <header>
-      <nav>
-        <ul>
-          <!--unordered list-->
-          <!--li = bullet list-->
-          <a href="index.html">home</a>
-          <a href="page2.html">page 2</a>
-          <!--link to another site-->
-        </ul>
-      </nav>
+      <h1>
+        <a href="index.html">Jessica Wu</a>
+        <!--links back to home page-->
+      </h1>
+      <h2>
+        <nav>
+          <ul>
+            <!--unordered list-->
+            <a href="index.html">home</a>
+            <a href="page2.html">page 2</a>
+          </ul>
+        </nav>
+      </h2>
     </header>
     <main>
-      <!--below header to help structure-->
+      <p>
+        Hi! I'm Jessica, and I was born and raised in Maryland. I'm currently an
+        undergraduate student studying Computer Science at the University of
+        Maryland.
+      </p>
+      <p>ADD SOME STUFF ABOUT ME</p>
+
       <section>
-        <h1>
-          heading lul
-          <!--start at 1 for biggest-->
-        </h1>
-        <p>This is my first paragraph</p>
-        <!--new paragraph-->
-        <p>test website hehe pogchamp</p>
+        <h3>Currently,</h3>
+        <p>ADD CURRENT STUFF</p>
       </section>
+
       <section>
-        <h2>heading 2 man h2</h2>
-        <p>another section on the website</p>
+        <h3>Previously,</h3>
+        <p>ADD STUFF</p>
+      </section>
+
+      <section>
+        <h3>In my free time,</h3>
+        <p>ADD STUFF</p>
+      </section>
+
+      <section>
+        <h3>Say hi!</h3>
+        <p>Email: aprilwushuang at gmail dot com</p>
+        <p>
+          LinkedIn:
+          <a href="https://www.linkedin.com/in/jessica-wu3/">Jessica Wu</a>.
+        </p>
       </section>
     </main>
     <footer>
-      <nav>
-        <ul>
-          <!--unordered list-->
-          <!--li = bullet list-->
-          <a href="index.html">home</a>
-          <a href="page2.html">page 2</a>
-          <!--link to another site-->
-        </ul>
-      </nav>
-      <p>Copyright &copy; Jessica Wu</p>
+      <p>
+        Homepage inspired by
+        <a href="https://justina.tech/">Justina</a>.
+      </p>
+      <p>Copyright &copy; Jessica Wu; updated May 21, 2021</p>
     </footer>
   </body>
 </html>
