links mostly and text

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     <header>
       <h1>
-        <a href="index.html">Jessica Wu</a>
+        <a style="color: black" href="index.html">Jessica Wu</a>
         <!--links back to home page-->
       </h1>
       <h2>
@@ -27,30 +27,44 @@
       </h2>
     </header>
     <main>
-      <p>
-        Hi! I'm Jessica, and I was born and raised in Maryland. I'm currently an
-        undergraduate student studying Computer Science at the University of
-        Maryland.
-      </p>
-      <p>ADD SOME STUFF ABOUT ME</p>
+      <p>Hi! I'm Jessica, and I was born and raised in Maryland.</p>
+      <p>ADD STUFF ABOUT ME</p>
 
       <section>
-        <h3>Currently,</h3>
-        <p>ADD CURRENT STUFF</p>
-      </section>
-
-      <section>
-        <h3>Previously,</h3>
+        <h3>currently...</h3>
+        <p>
+          I'm an undergraduate student studying Computer Science at the
+          University of Maryland. Along the way, I've met some amazing educators
+          who gave me amazing instruction and opportunities, leading to my
+          decision to double minor in mathematics and business analytics: two
+          subjects I'm also interested in.
+        </p>
+        <p>
+          This summer, I will be transitioning to the business world with
+          Inspire where I will be working as a marketing intern on a breast
+          cancer campaign.
+        </p>
         <p>ADD STUFF</p>
       </section>
 
       <section>
-        <h3>In my free time,</h3>
+        <h3>previously...</h3>
+        <p>
+          This past spring semester, I've been working as an intern at Exerceo
+          in a professional mentorship program while using Linux and text
+          editors on Fedora in Java and JavaScript in order to create an
+          inventory that can store items.
+        </p>
         <p>ADD STUFF</p>
       </section>
 
       <section>
-        <h3>Say hi!</h3>
+        <h3>for fun...</h3>
+        <p>ADD STUFF</p>
+      </section>
+
+      <section>
+        <h3>say hi!</h3>
         <p>Email: aprilwushuang at gmail dot com</p>
         <p>
           LinkedIn:
@@ -59,10 +73,11 @@
       </section>
     </main>
     <footer>
-      <p>
+      <!--<p>
         Homepage inspired by
         <a href="https://justina.tech/">Justina</a>.
       </p>
+    -->
       <p>Copyright &copy; Jessica Wu; updated May 21, 2021</p>
     </footer>
   </body>
