home page mostly finished for now

--- a/index.html
+++ b/index.html
@@ -27,24 +27,29 @@
       </h2>
     </header>
     <main>
-      <p>Hi! I'm Jessica, and I was born and raised in Maryland.</p>
-      <p>ADD STUFF ABOUT ME</p>
+      <p>
+        Hi! I'm Jessica, a sophomore at the University of Maryland. I was born
+        and raised in Maryland, but I love to travel and explore new places. I
+        also love to learn new things--especially if it's through a hands-on
+        activity.
+      </p>
 
       <section>
         <h3>currently...</h3>
         <p>
-          I'm an undergraduate student studying Computer Science at the
-          University of Maryland. Along the way, I've met some amazing educators
-          who gave me amazing instruction and opportunities, leading to my
-          decision to double minor in mathematics and business analytics: two
-          subjects I'm also interested in.
+          At UMD, I study computer science. I would also love to be involved in
+          research for in computer and information science in the future. Along
+          the way, I've met some amazing educators who gave me unparalleled
+          instruction and opportunities, leading to my decision to double minor
+          in mathematics and business analytics. While I love studying these
+          three subjects, I also have a interest for neuroscience and psychology
+          that I developed in high school.
         </p>
         <p>
-          This summer, I will be transitioning to the business world with
-          Inspire where I will be working as a marketing intern on a breast
-          cancer campaign.
+          This summer, I will be transitioning from the computer science world
+          to the business world with Inspire where I will be working as a
+          marketing intern on a breast cancer campaign.
         </p>
-        <p>ADD STUFF</p>
       </section>
 
       <section>
@@ -55,21 +60,51 @@
           editors on Fedora in Java and JavaScript in order to create an
           inventory that can store items.
         </p>
-        <p>ADD STUFF</p>
+        <p>
+          In high school, I participated in FIRST robotics where I helped with
+          the design and building of our robot as well as conduct team bonding
+          exercises to help improve everyone's communication.
+        </p>
       </section>
 
       <section>
         <h3>for fun...</h3>
-        <p>ADD STUFF</p>
+        <p>
+          Beyond my academic interests, I love to spent my time playing tennis,
+          piano, and a few games such as Valorant or Minecraft. With friends, I
+          love to go to new places, whether it be educational or for fun, to
+          create memories and take pictures (scroll down!). For personal
+          improvement, I like to write in my journal, improve my Chinese, and
+          sometimes run.
+        </p>
       </section>
 
       <section>
-        <h3>say hi!</h3>
+        <h3>explore...</h3>
+        <p>Browse the other pages!</p>
+        <p>
+          <a href="page2.html">page 2</a>
+          : INSERT WHAT ITS ABOUT
+        </p>
+      </section>
+
+      <section>
+        <h3>reach out!</h3>
         <p>Email: aprilwushuang at gmail dot com</p>
         <p>
           LinkedIn:
           <a href="https://www.linkedin.com/in/jessica-wu3/">Jessica Wu</a>.
         </p>
+      </section>
+
+      <section>
+        <p>
+          Here is a picture of me with a fish at the
+          <a href="https://education.fcps.org/essl/"
+            >Earth and Space Science Lab</a
+          >
+        </p>
+        <p><img src="img/me with fish.PNG" alt="me with a fish at ESSL" /></p>
       </section>
     </main>
     <footer>
