starting education page

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!--helps for non-computer devices-->
     <title>Jessica Wu | Home</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="stylesHome.css" />
   </head>
   <body>
     <header>
@@ -21,7 +21,7 @@
           <ul>
             <!--unordered list-->
             <a href="index.html">home</a>
-            <a href="page2.html">page 2</a>
+            <a href="education.html">education</a>
           </ul>
         </nav>
       </h2>
@@ -83,8 +83,8 @@
         <h3>explore...</h3>
         <p>Browse the other pages!</p>
         <p>
-          <a href="page2.html">page 2</a>
-          : INSERT WHAT ITS ABOUT
+          <a href="education.html">education</a>
+          : a summary of educational institutions and coursework
         </p>
       </section>
 
