working on education page still

--- a/education.html
+++ b/education.html
@@ -30,6 +30,22 @@
       <h2>Education</h2>
       <section>
         <p>Urbana High School: Class of 2020</p>
+        <nav>
+          <ul>
+            <li>GPA: 4.8/4.0</li>
+            <li>Rank: 18/437</li>
+            <li>
+              Relevant coursework: Foundations of Computer Science, AP Computer
+              Science Principles, AP Computer Science A, AP Statistics, AP
+              Calculus BC (5, subscore 5)
+            </li>
+            <li>National AP Scholar</li>
+          </ul>
+        </nav>
+      </section>
+
+      <section>
+        <p>Frederick Community College: Dual Enrollment Student</p>
       </section>
 
       <section>
@@ -37,6 +53,17 @@
           University of Maryland, College Park: Bachelor of Science, Computer
           Science, Class of 2024
         </p>
+        <nav>
+          <ul>
+            <li>Minor: Mathematics, Business Analytics</li>
+            <li>University Honors Program</li>
+            <li>GPA: 4.0, Major GPA: 4.0</li>
+            <li>
+              Relevant coursework: Object Oriented Programming I/II,
+              Introduction to Linear Algebra, Discrete Structures
+            </li>
+          </ul>
+        </nav>
       </section>
     </main>
     <footer>
