page 2 done for now

--- a/education.html
+++ b/education.html
@@ -7,8 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!--helps for non-computer devices-->
-    <title>Jessica Wu | Home</title>
-    <link rel="stylesheet" href="stylesHome.css" />
+    <title>Jessica Wu | Education</title>
+    <link rel="stylesheet" href="stylesEducation.css" />
   </head>
   <body>
     <header>
@@ -18,7 +18,7 @@
       </h1>
       <h2>
         <nav>
-          <ul>
+          <ul style="margin-left: -2.5rem">
             <!--unordered list-->
             <a href="index.html">home</a>
             <a href="education.html">education</a>
@@ -29,41 +29,272 @@
     <main>
       <h2>Education</h2>
       <section>
-        <p>Urbana High School: Class of 2020</p>
+        <p style="margin-left: 2.5rem; font-weight: bold">
+          Urbana High School: Class of 2020
+        </p>
         <nav>
           <ul>
-            <li>GPA: 4.8/4.0</li>
-            <li>Rank: 18/437</li>
-            <li>
+            <li style="margin-left: 2rem">GPA: 4.8/4.0</li>
+            <li style="margin-left: 2rem">Rank: 18/437</li>
+            <li style="margin-left: 2rem">
               Relevant coursework: Foundations of Computer Science, AP Computer
               Science Principles, AP Computer Science A, AP Statistics, AP
               Calculus BC (5, subscore 5)
             </li>
-            <li>National AP Scholar</li>
+            <li style="margin-left: 2rem">National AP Scholar</li>
           </ul>
         </nav>
       </section>
 
       <section>
-        <p>Frederick Community College: Dual Enrollment Student</p>
+        <p style="margin-left: 2.5rem; font-weight: bold">
+          Frederick Community College: Dual Enrollment Student
+        </p>
+        <nav>
+          <ul>
+            <li style="margin-left: 2rem">GPA: 4.0/4.0</li>
+            <li style="margin-left: 2rem">
+              Relevant coursework: Elementary Statistics, Introduction to
+              Computer and Information Processing, Calculus III
+            </li>
+          </ul>
+        </nav>
       </section>
 
       <section>
-        <p>
+        <p style="margin-left: 2.5rem; font-weight: bold">
           University of Maryland, College Park: Bachelor of Science, Computer
           Science, Class of 2024
         </p>
         <nav>
           <ul>
-            <li>Minor: Mathematics, Business Analytics</li>
-            <li>University Honors Program</li>
-            <li>GPA: 4.0, Major GPA: 4.0</li>
-            <li>
+            <li style="margin-left: 2rem">University Honors Program</li>
+            <li style="margin-left: 2rem">
+              Minor: Mathematics, Business Analytics
+            </li>
+            <li style="margin-left: 2rem">GPA: 4.0, Major GPA: 4.0</li>
+            <li style="margin-left: 2rem">
               Relevant coursework: Object Oriented Programming I/II,
               Introduction to Linear Algebra, Discrete Structures
             </li>
           </ul>
         </nav>
+      </section>
+      <h3>a recap...</h3>
+      <section>
+        <p style="margin-left: 2.5rem">
+          The following section is dedicated to the college courses I've taken
+          at UMD! I tend to get false impressions or hear different things from
+          other people about these classes, but I want to record and reflect on
+          my own experience. It's mostly for personal recollection, sort of like
+          a school journal, but feel free to read on! Courses will be listed in
+          order by semesters and course name. The number in parenthesis
+          represents the number of credits the course is.
+        </p>
+        <section class="normal-box">
+          <p style="margin-left: 1rem">Fall 2020</p>
+          <nav>
+            <ul>
+              <li>PHYS121: Fundamentals of Phyics I</li>
+              <p>
+                Course Description: The first part of a two-semester course in
+                general physics treating the fields of mechanics, heat, sound,
+                electricity, magnetism, optics, and modern physics. Together
+                with PHYS122, this generally satisfies the minimum requirement
+                of medical and dental schools.
+              </p>
+              <p>
+                Reflection: I took it because I considered going pre-med?
+                Which... that idea didn't age quite well haha. Anyhow, it was
+                basically Physics 1 so it wasn't too bad. I learned most of the
+                material in high school, so the course was basically a review.
+                The downcurve stressed me out, but it was okay! Also met and
+                befriended one of the best people in that class, and he was my
+                lab partner.
+              </p>
+              <li>HNUH100: Gateway Seminar</li>
+              <p>
+                Course Description: First-semester orientation and exploration
+                seminar required of all UH students.
+              </p>
+              <p>
+                Reflection: We read Weapons of Math Destruction sorta like a
+                book club. We also explored ancient text/maps, and it was quite
+                interesting. I also became friends with a really cool guy.
+              </p>
+              <li>
+                HNUH248Y: How Do You "Man Up?": Men, Masculinity, and Mental
+                Health
+              </li>
+              <p>
+                Course Description: Students in this interdisciplinary course
+                will explore multi-layered issues related to privilege and
+                oppression through their own life experiences via exposure to
+                theory, research, film, memoirs, and current events. Students
+                will evaluate and critique common assumptions about the meaning
+                and experiences of privilege and oppression using
+                Intersectionality theory as a guiding framework. The human
+                experience related to various social identities (i.e., race,
+                gender and gender identity, sexual orientation, social class,
+                religion, age, and ability) will be addressed.
+              </p>
+              <p>
+                Reflection: Super fun and interesting with the help of the
+                professor. One of the more interesting units was probably
+                learning about the stereotypes.
+              </p>
+              <li>MATH240: Introduction to Linear Algebra</li>
+              <p>
+                Course Description: Basic concepts of linear algebra: vector
+                spaces, applications to line and plane geometry, linear
+                equations and matrices, similar matrices, linear
+                transformations, eigenvalues, determinants and quadratic forms.
+              </p>
+              <p>
+                Reflection: Really enjoyed the eigenvalue/eigenvector chapter;
+                solving those problems were fun. I also liked the beginning
+                where we learned matrices. It became difficult when we started
+                learning about transformations though :( definitely half-assed
+                and need to review that unit.
+              </p>
+              <li>CMSC131: Object-Oriented Programming I</li>
+              <p>
+                Course Description: Introduction to programming and computer
+                science. Emphasizes understanding and implementation of
+                applications using object-oriented techniques. Develops skills
+                such as program design and testing as well as implementation of
+                programs using a graphical IDE. Programming done in Java.
+              </p>
+              <p>
+                Reflection: One of my more relaxing core classes, since I had
+                prior programming experience. The projects were really fun to
+                think about too, since they were mostly like logic puzles.
+              </p>
+            </ul>
+          </nav>
+        </section>
+
+        <section class="normal-box">
+          <p style="margin-left: 1rem">Winter 2021</p>
+          <nav>
+            <ul>
+              <li>INAG110: Oral Communication</li>
+              <p>
+                Course Description: A study of how perception, self-concept, and
+                verbal and nonverbal communications affect the communication
+                process as it emerges in the workplace. The course provides
+                skill training in speech writing, public speaking, group
+                communication, interpersonal communication, listening, and
+                responding.
+              </p>
+              <p>
+                Reflection: I had a lot of fun: I got to do 3/4 presentations on
+                topics I was very familiar with. It was stressful having to do
+                four presentations in 3 weeks, not to mention taking a midterm
+                and final. Since I took the class online, it was a bit less
+                nervewrecking presenting over a Zoom than in real life. However,
+                I did learn all about Zoom etiquette and how to properly be
+                interviewed online.
+              </p>
+            </ul>
+          </nav>
+        </section>
+
+        <section class="normal-box">
+          <p style="margin-left: 1rem">Spring 2021</p>
+          <nav>
+            <ul>
+              <li>CMSC250: Discrete Structures (4)</li>
+              <p>
+                Course Description: Fundamental mathematical concepts related to
+                computer science, including finite and infinite sets, relations,
+                functions, and propositional logic. Introduction to other
+                techniques, modeling and solving problems in computer science.
+                Introduction to permutations, combinations, graphs, and trees
+                with selected applications.
+              </p>
+              <p>
+                Reflection: One of my top three classes at UMD as of May 2021.
+                As I write this, my final grade hasn't come out. The class was
+                definitely a challenge for many including myself, but I loved
+                how much I learned and how the class was taught with lectures
+                T/TH and weekly homeworks.
+              </p>
+              <li>HNUH248A: Identity, Places, & Spaces (3)</li>
+              <p>
+                Course Description: Students in this interdisciplinary course
+                will explore multi-layered issues related to privilege and
+                oppression through their own life experiences via exposure to
+                theory, research, film, memoirs, and current events. Students
+                will evaluate and critique common assumptions about the meaning
+                and experiences of privilege and oppression using
+                Intersectionality theory as a guiding framework. The human
+                experience related to various social identities (i.e., race,
+                gender and gender identity, sexual orientation, social class,
+                religion, age, and ability) will be addressed.
+              </p>
+              <p>
+                Reflection: "My eyes have been opened" is the saying I'd use to
+                describe what this class has done for me.
+              </p>
+              <li>MUSC140: Music Fundamentals I (3)</li>
+              <p>
+                Course Description: Introductory theory course. Notation,
+                scales, intervals, triads, rhythm, form and basic aural skills.
+              </p>
+              <p>
+                Reflection: Music composition is the bane of my existence: one
+                of the most difficult aspects of this class and classical music.
+                Music theory isn't too bad though.
+              </p>
+              <li>CMSC132: Object-Oriented Programming II (4)</li>
+              <p>
+                Course Description: Introduction to use of computers to solve
+                problems using software engineering principles. Design, build,
+                test, and debug medium -size software systems and learn to use
+                relevant tools. Use object-oriented methods to create effective
+                and efficient problem solutions. Use and implement application
+                programming interfaces (APIs). Programming done in Java.
+              </p>
+              <p>
+                Reflection: Learning all of the data structures was definitely a
+                challenge. I think ArrayLists and Hash/Tree sets are my
+                favorites, but I've gotta be more familiarized with binary
+                search trees. Linked lists aren't bad too, but it's in the same
+                boat as binary search trees.
+              </p>
+              <li>BSCI170: Principles of Molecular & Cellular Biology (3)</li>
+              <p>
+                Course Description: Basic principles of biology with special
+                emphasis on cellular and molecular biology.
+              </p>
+              <p>
+                Reflection: I took bio and bio lab so I could take more
+                neuroscience classes in the future, but this class was a great
+                first step. Turns out I knew some of the fundamentals from high
+                school biology, but I still definitely learned a lot of new
+                material such as the details of photosynthesis and cellular
+                respiration.
+              </p>
+              <li>
+                BSCI171: Principles of Molecular & Cellular Biology Laboratory
+                (1)
+              </li>
+              <p>
+                Course Description: Basic laboratory principles of biology with
+                special emphasis on cellular and molecular biology.
+              </p>
+              <p>
+                Reflection: Do I think that the expected time spent on this 1
+                credit class should be 10 hours per week is absurd? Yes.
+                Otherwise, make the class more credits plz :) In all realness,
+                the multi-week labs became incredibly difficult whereas the
+                first five one-week labs weren't too strenous (in fact they were
+                more so busy work in comparison).
+              </p>
+            </ul>
+          </nav>
+        </section>
       </section>
     </main>
     <footer>
