updated links and added resume

--- a/index.html
+++ b/index.html
@@ -13,15 +13,18 @@
   <body>
     <header>
       <h1>
-        <a style="color: black" href="index.html">Jessica Wu</a>
+        <a style="color: black" href="https://jessie20022.github.io/"
+          >Jessica Wu</a
+        >
         <!--links back to home page-->
       </h1>
       <h2>
         <nav>
           <ul>
             <!--unordered list-->
-            <a href="index.html">home</a>
+            <a href="https://jessie20022.github.io/">home</a>
             <a href="education.html">education</a>
+            <a href="docs/Resume--Summer2021.docx.pdf">resume</a>
           </ul>
         </nav>
       </h2>
@@ -86,6 +89,10 @@
           <a href="education.html">education</a>
           : a summary of educational institutions and coursework
         </p>
+        <p>
+          <a href="docs/Resume--Summer2021.docx.pdf">resume</a> : a copy of my
+          resume
+        </p>
       </section>
 
       <section>
@@ -108,11 +115,6 @@
       </section>
     </main>
     <footer>
-      <!--<p>
-        Homepage inspired by
-        <a href="https://justina.tech/">Justina</a>.
-      </p>
-    -->
       <p>Copyright &copy; Jessica Wu; updated May 21, 2021</p>
     </footer>
   </body>
