--- a/education.html
+++ b/education.html
@@ -22,6 +22,7 @@
             <!--unordered list-->
             <a href="index.html">home</a>
             <a href="education.html">education</a>
+            <a href="docs/Resume--Summer2021.docx.pdf">resume</a>
           </ul>
         </nav>
       </h2>
