update links gain on education page

--- a/education.html
+++ b/education.html
@@ -13,14 +13,16 @@
   <body>
     <header>
       <h1>
-        <a style="color: black" href="index.html">Jessica Wu</a>
+        <a style="color: black" href="https://jessie20022.github.io/"
+          >Jessica Wu</a
+        >
         <!--links back to home page-->
       </h1>
       <h2>
         <nav>
           <ul style="margin-left: -2.5rem">
             <!--unordered list-->
-            <a href="index.html">home</a>
+            <a href="https://jessie20022.github.io/">home</a>
             <a href="education.html">education</a>
             <a href="docs/Resume--Summer2021.docx.pdf">resume</a>
           </ul>
