--- a/education.html
+++ b/education.html
@@ -24,6 +24,8 @@
             <!--unordered list-->
             <a href="https://jessie20022.github.io/">home</a>
             <a href="education.html">education</a>
+            <a href="blog.html">blog</a>
+            <a href="relax.html">relax</a>
             <a href="docs/Resume--Summer2021.docx.pdf">resume</a>
           </ul>
         </nav>
@@ -301,7 +303,9 @@
       </section>
     </main>
     <footer>
-      <p>Copyright &copy; Jessica Wu; updated May 21, 2021</p>
+      <p style="margin-left: 2.5rem">
+        Copyright &copy; Jessica Wu; updated May 21, 2021
+      </p>
     </footer>
   </body>
 </html>
