blog and relax pages

--- a/blog.html
+++ b/blog.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!--helps for non-computer devices-->
     <title>Jessica Wu | Blog</title>
-    <link rel="stylesheet" href="stylesHome.css" />
+    <link rel="stylesheet" href="stylesBlog.css" />
   </head>
   <body>
     <header>
