--- a/index.html
+++ b/index.html
@@ -52,8 +52,9 @@
         </p>
         <p>
           This summer, I will be transitioning from the computer science world
-          to the business world with Inspire where I will be working as a
-          marketing intern on a breast cancer campaign.
+          to the business world where I will be working as a marketing intern on
+          a breast cancer campaign and learning the ins and outs of appealing to
+          different age groups and when to capitalize on a market.
         </p>
       </section>
 
