--- a/relax.html
+++ b/relax.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!--helps for non-computer devices-->
     <title>Jessica Wu | Relax</title>
-    <link rel="stylesheet" href="stylesHome.css" />
+    <link rel="stylesheet" href="stylesRelax.css" />
   </head>
   <body>
     <header>
@@ -31,7 +31,15 @@
         </nav>
       </h2>
     </header>
-    <main></main>
+    <main>
+      <h2 style="margin-left: 2.5rem">Relax</h2>
+      <p>
+        Sometimes, after a busy day, we come home and want to chill out. Here,
+        I've compiled a bunch of playlists, links, articles, and other
+        miscellaneous things you can spend your time exploring and taking a
+        break from reality.
+      </p>
+    </main>
     <footer>
       <p>Copyright &copy; Jessica Wu; updated May 21, 2021</p>
     </footer>
